# -*- coding: utf-8 -*-
#
# setup.cfg
#
# Copyright (C) 2022-2023 Franco Masotti (see /README.md)
#
# This file is part of fpyutils.
#
# fpyutils is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# fpyutils is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with fpyutils.  If not, see <http://www.gnu.org/licenses/>.
#

[metadata]
name=fpyutils
# version needs setuptools >= 39.2.0
version=4.0.0
license=GPLv3+
description=A collection of useful non-standard Python functions which aim to be simple to use, highly readable but not efficient.
long_description=file: README.md
long_description_content_type=text/markdown
author=Franco Masotti
author_email=franco.masotti@tutanota.com
keywords=
    utilities
    text
    command
url=https://blog.franco.net.eu.org/software/#fpyutils
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
install_requires=
packages=find:

[options.packages.find]
exclude=
    *tests*

[options.package_data]
* = *.txt, *.rst

[yapf]
based_on_style = pep8
indent_width = 4

[flake8]
ignore =
    E125
    E131
    E501
    W503
    W504
    F401

[isort]
# See
# https://github.com/ESMValGroup/ESMValCore/issues/777
multi_line_output = 3
include_trailing_comma = true

[tox:tox]
requires =
    tox>=4
env_list = py{37,38,39,310,311,312,313}

[testenv]
description = run the tests with unittest
package = wheel
wheel_build_env = .pkg
commands =
    python -m unittest fpyutils.tests.tests --failfast --locals --verbose
